# cribbager

./: .dockerignore  .gitignore  .golangci.yml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  fly.toml  go.mod
.github/: dependabot.yml
.github/workflows/: ci.yml
cmd/cribbager/: board.go  cards.go  main.go  play.go  render.go  render_test.go
cmd/cribbager-server/: main.go
cmd/mldata/: main.go  outcomes.go
cmd/pegdata/: main.go
docs/: bot.md  deployment.md  development.md
docs/design/: game-display-variations.md
internal/bot/: analysis.go  analysis_test.go  bot.go  bot_test.go  bots.go  compare.go  compare_test.go  dealstats.go  match.go  mlbot.go  mlbot_test.go  mlpeg-weights-v1.json  par_test.go
internal/cribbage/: card.go  card_test.go  deck.go
internal/game/: command.go  deck.go  endgame_test.go  event.go  game.go  game_test.go  gob.go  handicap_test.go  illegal_test.go  reconstruct.go  reconstruct_test.go  seat.go  snapshot.go  snapshot_test.go  view.go
internal/nn/: nn.go  nn_test.go  parity_test.go
internal/server/: analysis.go  analysis2.go  analysis2_test.go  analysis_test.go  auth.go  auth_game_test.go  auth_handlers.go  auth_store_mem.go  auth_store_postgres.go  auth_test.go  bot.go  bot_test.go  email.go  hardening_test.go  pgpool.go  (+27 more)
ml/: .gitignore  pyproject.toml
ml/cribml/: __init__.py  data.py  export.py  model.py
ml/scripts/: make_bot_parity.py  make_parity_fixture.py  peg_iterate.sh  train_discard.py  train_discard_mc.py  train_discard_win.py  train_pegging.py
web/: eslint.config.js  package-lock.json  package.json
(+128 files in other folders)
